--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,15 @@
-
-[*.lua]
+[*]
 charset = utf-8
 end_of_line = lf
 indent_style = space
-indent_size = 4
+indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = false
+
+[*.lua]
+indent_size = 4
+trim_trailing_whitespace = true
+
+[*.fnl]
+trim_trailing_whitespace = true
 
